Deleting transition statements for now.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -726,7 +726,6 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
      border-width: 1px;
      border-color: #777;
      box-shadow: 0 0 1px 1px #777;
-    transition: border-shadow 2s ease-out;
 }
 
 .tablet.ios div.kmw-key.kmw-key-default[id='ዀ-extra-U_12C0'],
@@ -740,7 +739,6 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
     border-width: 1px;
     border-color: #777;
     box-shadow: 0 0 1px 1px #777;
-    transition: 2s;
 }
 
 
@@ -799,7 +797,6 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
     border-width: 1px;
     border-color: #eceae4;
     box-shadow: 0 0 1px 1px #eceae4;
-    transition: 2s;
 }
 
 .tablet.android div.kmw-key.kmw-key-default[id='ዀ-extra-U_12C0'],
@@ -813,7 +810,6 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
     border-width: 1px;
     border-color: #eceae4;
     box-shadow: 0 0 1px 1px #eceae4;
-    transition: 2s;
 }
 
 .phone.android div.kmw-key.kmw-key-default[id='latin-punct-layer-T_BANG'], .phone.android div.kmw-key.kmw-key-default[id='ethio-punct-layer-T_1362']
@@ -822,9 +818,11 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
     border-width: 1px;
     border-color: #ccf1ff;
     box-shadow: 0 0 1px 1px #ccf1ff;
-    transition: 2s;
 }
 
+/* For later:
+ *
 .phone.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M']:click {
     box-shadow: 0;
 }
+*/
