--- a/release/gff/gff_amharic/source/help/kb.css
+++ b/release/gff/gff_amharic/source/help/kb.css
@@ -319,45 +319,20 @@
            .phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1363  /* /, ፣ */
   { background: #e0d7ff ; color: black; } /* #f2a2e8 */
 
-/* default layer ሳድስ - used primarily when a sadis letter appears in a popup or on the -extra layers */
-/* .phone div.kmw-key.kmw-key-default[id$='U_1205'], .tablet div.kmw-key.kmw-key-default[id$='U_1205'],  /* ህ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_120D'], .tablet div.kmw-key.kmw-key-default[id$='U_120D'],  /* ል */
-/* .phone div.kmw-key.kmw-key-default[id$='U_1215'], .tablet div.kmw-key.kmw-key-default[id$='U_1215'],  /* ሕ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_1E7E5'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7E5'], /* 𞟥 */ 
-/* .phone div.kmw-key.kmw-key-default[id$='U_121D'], .tablet div.kmw-key.kmw-key-default[id$='U_121D'],  /* ም */
-.phone div.kmw-key.kmw-key-default[id$='U_1225'], /* .tablet div.kmw-key.kmw-key-default[id$='U_1225'],  /* ሥ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_122D'], .tablet div.kmw-key.kmw-key-default[id$='U_122D'],  /* ር */
-.phone div.kmw-key.kmw-key-default[id$='U_1235'], .tablet div.kmw-key.kmw-key-default[id$='U_1235'],  /* ስ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_123D'], .tablet div.kmw-key.kmw-key-default[id$='U_123D'],  /* ሽ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_1245'], .tablet div.kmw-key.kmw-key-default[id$='U_1245'],  /* ቅ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_1255'], .tablet div.kmw-key.kmw-key-default[id$='U_1255'],  /* ቕ */
-.phone div.kmw-key.kmw-key-default[id$='U_1265'], .tablet div.kmw-key.kmw-key-default[id$='U_1265'],  /* ብ */
-.phone div.kmw-key.kmw-key-default[id$='U_126D'], .tablet div.kmw-key.kmw-key-default[id$='U_126D'],  /* ቭ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_1275'], .tablet div.kmw-key.kmw-key-default[id$='U_1275'],  /* ት */
-/* .phone div.kmw-key.kmw-key-default[id$='U_127D'], .tablet div.kmw-key.kmw-key-default[id$='U_127D'],  /* ች */
-/* .phone div.kmw-key.kmw-key-default[id$='U_1285'], .tablet div.kmw-key.kmw-key-default[id$='U_1285'],  /* ኅ */
-.phone div.kmw-key.kmw-key-default[id$='U_1295'], .tablet div.kmw-key.kmw-key-default[id$='U_1295'],  /* ን */
-.phone div.kmw-key.kmw-key-default[id$='U_129D'], /* .tablet div.kmw-key.kmw-key-default[id$='U_129D'],  /* ኝ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_12A5'], .tablet div.kmw-key.kmw-key-default[id$='U_12A5'],  /* እ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_12AD'], .tablet div.kmw-key.kmw-key-default[id$='U_12AD'],  /* ክ */ 
-/* .phone div.kmw-key.kmw-key-default[id$='U_12BD'], .tablet div.kmw-key.kmw-key-default[id$='U_12BD'],  /* ኽ */ 
-.phone div.kmw-key.kmw-key-default[id$='U_12CD'], .tablet div.kmw-key.kmw-key-default[id$='U_12CD'],  /* ው */ 
-/* .phone div.kmw-key.kmw-key-default[id$='U_12D5'], .tablet div.kmw-key.kmw-key-default[id$='U_12D5'],  /* ዕ */
-.phone div.kmw-key.kmw-key-default[id$='U_12DD'], .tablet div.kmw-key.kmw-key-default[id$='U_12DD'],  /* ዝ */
-.phone div.kmw-key.kmw-key-default[id$='U_12E5'], .tablet div.kmw-key.kmw-key-default[id$='U_12E5'],  /* ዥ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_12ED'], .tablet div.kmw-key.kmw-key-default[id$='U_12ED'],  /* ይ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_12F5'], .tablet div.kmw-key.kmw-key-default[id$='U_12F5'],  /* ድ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_1305'], .tablet div.kmw-key.kmw-key-default[id$='U_1305'],  /* ጅ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_130D'], .tablet div.kmw-key.kmw-key-default[id$='U_130D'],  /* ግ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_131D'], .tablet div.kmw-key.kmw-key-default[id$='U_131D'],  /* ጝ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_1325'], .tablet div.kmw-key.kmw-key-default[id$='U_1325'],  /* ጥ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_132D'], .tablet div.kmw-key.kmw-key-default[id$='U_132D'],  /* ጭ */
-.phone div.kmw-key.kmw-key-default[id$='U_1335'], .tablet div.kmw-key.kmw-key-default[id$='U_1335'],  /* ጵ */
-.phone div.kmw-key.kmw-key-default[id$='U_133D'], .tablet div.kmw-key.kmw-key-default[id$='U_133D'],  /* ጽ */
-.phone div.kmw-key.kmw-key-default[id$='U_1345'], /* .tablet div.kmw-key.kmw-key-default[id$='U_1345'],  /* ፅ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_134D'], .tablet div.kmw-key.kmw-key-default[id$='U_134D'],  /* ፍ */
- .phone div.kmw-key.kmw-key-default[id$='U_1355'], /* .tablet div.kmw-key.kmw-key-default[id$='U_1355'],  /* ፕ */
-.phone div.kmw-key.kmw-key-default[id$='T_ሳድስ'], .tablet div.kmw-key.kmw-key-default[id$='T_ሳድስ']
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1225'],   /* ሥ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1235'],   /* ስ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1265'],  /* ብ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_126D'],  /* ቭ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1295'],  /* ን */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_129D'],   /* ኝ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_12DD'],  /* ዝ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_12E5'],  /* ዥ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1335'],  /* ጵ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_133D'],  /* ጽ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1345'],  /* ፅ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='U_1355'],  /* ፕ */
+#kmw-popup-keys  div.kmw-key.kmw-key-default[id$='T_ሳድስ']
   { background: #eceae4; color: black; }
 
 /* default layer ሳብዕ */
@@ -701,27 +676,30 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 .phone.ios div.kmw-key.kmw-key-default[id='ጨ-layer-K_C+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ጨ-layer-K_C+shift'],
 .phone.ios div.kmw-key.kmw-key-default[id='የ-layer-K_Y'], .tablet.ios div.kmw-key.kmw-key-default[id='የ-layer-K_Y'],
 .phone.ios div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'],
-.phone.ios div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ፐ-layer-K_P'], .tablet.ios div.kmw-key.kmw-key-default[id='ፐ-layer-K_P'],
 
 .phone.ios div.kmw-key.kmw-key-default[id='አ-layer-U_12A5'], .tablet.ios div.kmw-key.kmw-key-default[id='አ-layer-U_12A5'],
 .phone.ios div.kmw-key.kmw-key-default[id='ሰ-layer-K_S'], .tablet.ios div.kmw-key.kmw-key-default[id='ሰ-layer-K_S'],
-.phone.ios div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'], .tablet.ios div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'],
+.phone.ios div.kmw-key.kmw-key-default[id='ሠ-layer-U_1225'], .tablet.ios div.kmw-key.kmw-key-default[id='ሠ-layer-U_1225'],
 .phone.ios div.kmw-key.kmw-key-default[id='ደ-layer-K_D'], .tablet.ios div.kmw-key.kmw-key-default[id='ደ-layer-K_D'],
 .phone.ios div.kmw-key.kmw-key-default[id='ረ-layer-K_R'], .tablet.ios div.kmw-key.kmw-key-default[id='ረ-layer-K_R'],
 .phone.ios div.kmw-key.kmw-key-default[id='ከ-layer-K_K'], .tablet.ios div.kmw-key.kmw-key-default[id='ከ-layer-K_K'],
+.phone.ios div.kmw-key.kmw-key-default[id='ኸ-layer-K_K+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ኸ-layer-K_K+shift'],
 .phone.ios div.kmw-key.kmw-key-default[id='ሀ-layer-K_H'], .tablet.ios div.kmw-key.kmw-key-default[id='ሀ-layer-K_H'],
+.phone.ios div.kmw-key.kmw-key-default[id='ኀ-layer-U_1285'], .tablet.ios div.kmw-key.kmw-key-default[id='ኀ-layer-U_1285'],
 .phone.ios div.kmw-key.kmw-key-default[id='ተ-layer-K_T'], .tablet.ios div.kmw-key.kmw-key-default[id='ተ-layer-K_T'],
 .phone.ios div.kmw-key.kmw-key-default[id='ጠ-layer-K_T+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ጠ-layer-K_T+shift'],
 .phone.ios div.kmw-key.kmw-key-default[id='ለ-layer-K_L'], .tablet.ios div.kmw-key.kmw-key-default[id='ለ-layer-K_L'],
 .phone.ios div.kmw-key.kmw-key-default[id='ጸ-layer-K_S+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ጸ-layer-K_S+shift'],
-.phone.ios div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ፀ-layer-U_1345'], .tablet.ios div.kmw-key.kmw-key-default[id='ፀ-layer-U_1345'],
 .phone.ios div.kmw-key.kmw-key-default[id='ዘ-layer-K_Z'], .tablet.ios div.kmw-key.kmw-key-default[id='ዘ-layer-K_Z'],
-.phone.ios div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z'], .tablet.ios div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z'],
+.phone.ios div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z+shift'],
 .phone.ios div.kmw-key.kmw-key-default[id='ወ-layer-K_W'], .tablet.ios div.kmw-key.kmw-key-default[id='ወ-layer-K_W'],
 .phone.ios div.kmw-key.kmw-key-default[id='ገ-layer-K_G'], .tablet.ios div.kmw-key.kmw-key-default[id='ገ-layer-K_G'],
 .phone.ios div.kmw-key.kmw-key-default[id='በ-layer-K_B'], .tablet.ios div.kmw-key.kmw-key-default[id='በ-layer-K_B'],
+.phone.ios div.kmw-key.kmw-key-default[id='ቨ-layer-K_V'], .tablet.ios div.kmw-key.kmw-key-default[id='ቨ-layer-K_V'],
 .phone.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
-.phone.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
+.phone.ios div.kmw-key.kmw-key-default[id='ኘ-layer-K_N+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ኘ-layer-U_129D'],
 .phone.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M'], .tablet.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M'],
 
 .phone.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'], .tablet.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'],
@@ -742,7 +720,8 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 .phone.ios div.kmw-key.kmw-key-default[id='latin-punct-layer-T_BANG'], .phone.ios div.kmw-key.kmw-key-default[id='ethio-punct-layer-T_1362']
 {
     /* background:#F6EEE3; */
-     background: #EBE8E2;
+    /* background: #EBE8E2; */
+    background: #eceae4 ;
      border-style: solid;
      border-width: 1px;
      border-color: #777;
@@ -773,27 +752,30 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 .phone.android div.kmw-key.kmw-key-default[id='ጨ-layer-K_C+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ጨ-layer-K_C+shift'],
 .phone.android div.kmw-key.kmw-key-default[id='የ-layer-K_Y'], .tablet.android div.kmw-key.kmw-key-default[id='የ-layer-K_Y'],
 .phone.android div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'],
-.phone.android div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'],
+.phone.android div.kmw-key.kmw-key-default[id='ፐ-layer-K_P'], .tablet.android div.kmw-key.kmw-key-default[id='ፐ-layer-K_P'],
 
 .phone.android div.kmw-key.kmw-key-default[id='አ-layer-U_12A5'], .tablet.android div.kmw-key.kmw-key-default[id='አ-layer-U_12A5'],
 .phone.android div.kmw-key.kmw-key-default[id='ሰ-layer-K_S'], .tablet.android div.kmw-key.kmw-key-default[id='ሰ-layer-K_S'],
-.phone.android div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'], .tablet.android div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'],
+.phone.android div.kmw-key.kmw-key-default[id='ሠ-layer-U_1225'], .tablet.android div.kmw-key.kmw-key-default[id='ሠ-layer-U_1225'],
 .phone.android div.kmw-key.kmw-key-default[id='ደ-layer-K_D'], .tablet.android div.kmw-key.kmw-key-default[id='ደ-layer-K_D'],
 .phone.android div.kmw-key.kmw-key-default[id='ረ-layer-K_R'], .tablet.android div.kmw-key.kmw-key-default[id='ረ-layer-K_R'],
 .phone.android div.kmw-key.kmw-key-default[id='ከ-layer-K_K'], .tablet.android div.kmw-key.kmw-key-default[id='ከ-layer-K_K'],
+.phone.android div.kmw-key.kmw-key-default[id='ኸ-layer-K_K+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ኸ-layer-K_K+shift'],
 .phone.android div.kmw-key.kmw-key-default[id='ሀ-layer-K_H'], .tablet.android div.kmw-key.kmw-key-default[id='ሀ-layer-K_H'],
+.phone.android div.kmw-key.kmw-key-default[id='ኀ-layer-U_1285'], .tablet.android div.kmw-key.kmw-key-default[id='ኀ-layer-U_1285'],
 .phone.android div.kmw-key.kmw-key-default[id='ተ-layer-K_T'], .tablet.android div.kmw-key.kmw-key-default[id='ተ-layer-K_T'],
 .phone.android div.kmw-key.kmw-key-default[id='ጠ-layer-K_T+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ጠ-layer-K_T+shift'],
 .phone.android div.kmw-key.kmw-key-default[id='ለ-layer-K_L'], .tablet.android div.kmw-key.kmw-key-default[id='ለ-layer-K_L'],
 .phone.android div.kmw-key.kmw-key-default[id='ጸ-layer-K_S+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ጸ-layer-K_S+shift'],
-.phone.android div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'],
+.phone.android div.kmw-key.kmw-key-default[id='ፀ-layer-U_1345'], .tablet.android div.kmw-key.kmw-key-default[id='ፀ-layer-U_1345'],
 .phone.android div.kmw-key.kmw-key-default[id='ዘ-layer-K_Z'], .tablet.android div.kmw-key.kmw-key-default[id='ዘ-layer-K_Z'],
-.phone.android div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z'], .tablet.android div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z'],
+.phone.android div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z+shift'],
 .phone.android div.kmw-key.kmw-key-default[id='ወ-layer-K_W'], .tablet.android div.kmw-key.kmw-key-default[id='ወ-layer-K_W'],
 .phone.android div.kmw-key.kmw-key-default[id='ገ-layer-K_G'], .tablet.android div.kmw-key.kmw-key-default[id='ገ-layer-K_G'],
 .phone.android div.kmw-key.kmw-key-default[id='በ-layer-K_B'], .tablet.android div.kmw-key.kmw-key-default[id='በ-layer-K_B'],
+.phone.android div.kmw-key.kmw-key-default[id='ቨ-layer-K_V'], .tablet.android div.kmw-key.kmw-key-default[id='ቨ-layer-K_V'],
 .phone.android div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet.android div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
-.phone.android div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet.android div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
+.phone.android div.kmw-key.kmw-key-default[id='ኘ-layer-K_N+shift'], .tablet.android div.kmw-key.kmw-key-default[id='ኘ-layer-U_129D'],
 .phone.android div.kmw-key.kmw-key-default[id='መ-layer-K_M'], .tablet.android div.kmw-key.kmw-key-default[id='መ-layer-K_M'],
 
 .phone.android div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'], .tablet.android div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'],
@@ -837,3 +819,10 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
     border-color: #ccf1ff;
     box-shadow: 0 0 1px 1px #ccf1ff;
 }
+
+/* For later:
+ *
+.phone.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M']:click {
+    box-shadow: 0;
+}
+*/
