CSS fixes to the K_SHIFT keys.

--- a/release/gff/gff_harege_fidelat/source/gff_harege_fidelat.css
+++ b/release/gff/gff_harege_fidelat/source/gff_harege_fidelat.css
@@ -162,7 +162,7 @@
 
 /* 5th ring - modifier keys */
 .kmw-keyboard-gff_amharic #default-K_TWAA,
-.phone div.kmw-key.kmw-key-shift[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-shift[id$='K_SHIFT'],
+.phone div.kmw-key.kmw-key-default[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-default[id$='K_SHIFT'],
 .phone div.kmw-key.kmw-key-shift[id$='K_LOPT'], .tablet div.kmw-key.kmw-key-shift[id$='K_LOPT'],
 .phone div.kmw-key.kmw-key-shift[id$='K_BKSP'], .tablet div.kmw-key.kmw-key-shift[id$='K_BKSP'],
 .phone div.kmw-key.kmw-key-shift[id$=K_ENTER], .tablet div.kmw-key.kmw-key-shift[id$=K_ENTER]
