CSS addition for popup key borders.

--- a/release/gff/gff_mesobe_fidelat/source/gff_mesobe_fidelat.css
+++ b/release/gff/gff_mesobe_fidelat/source/gff_mesobe_fidelat.css
@@ -577,3 +577,52 @@
     background: #ffffff;
     background: linear-gradient(180deg, #ffffff 0%, #e0d7ff 100%);
   }
+
+
+/* Outlines for popups on letter layers */
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00AB'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00BB'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_PERIOD'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_20AC'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='shift'],
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_135E'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1361'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1363'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1364'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1366'],
+
+
+/* Outlines for popups on punctuation layer */
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2013'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2014'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2022'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_005C'],
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A5'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A2'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A3'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_20A9'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_20BD'],
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A7'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_0060'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2018'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2019'],
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_201C'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_201D'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_201E'],
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A1'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00BF'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2026'],
+
+/* Outlines for popups on punctuation-2 layer */
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2030']
+{
+  border-color: #d0d3d9;
+  border-style: solid;
+  border-width: 1px;
+}
