made hint symbol darker on redish keys.

--- a/release/gff/gff_harege_fidelat/source/gff_harege_fidelat.css
+++ b/release/gff/gff_harege_fidelat/source/gff_harege_fidelat.css
@@ -282,3 +282,9 @@
   border-style: solid;
   border-width: 1px;
 }
+
+/* change hint color for red colored keys */
+
+div.kmw-key.kmw-key-default[id$='U_1362']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='U_2019']  div.kmw-key-popup-icon.kmw-key-text
+{color:  #777 ; }
