--- a/release/gff/gff_mesobe_fidelat/source/gff_mesobe_fidelat.css
+++ b/release/gff/gff_mesobe_fidelat/source/gff_mesobe_fidelat.css
@@ -625,3 +625,17 @@
   border-style: solid;
   border-width: 1px;
 }
+
+
+/* change hint color for red colored keys */
+div.kmw-key.kmw-key-default[id$='T_1280']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='U_1362']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='U_2019']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_P']  div.kmw-key-popup-icon.kmw-key-text,
+
+div.kmw-key.kmw-key-default[id$='T_1340']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_J']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='T_1E7E0']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='T_1220']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_X']  div.kmw-key-popup-icon.kmw-key-text
+{color:  #777 ; }
