applied hint shade change to other colored keys.

--- a/release/gff/gff_mesobe_fidelat/source/gff_mesobe_fidelat.css
+++ b/release/gff/gff_mesobe_fidelat/source/gff_mesobe_fidelat.css
@@ -637,5 +637,46 @@ div.kmw-key.kmw-key-default[id$='T_1340']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_J']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='T_1E7E0']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='T_1220']  div.kmw-key-popup-icon.kmw-key-text,
-div.kmw-key.kmw-key-default[id$='K_X']  div.kmw-key-popup-icon.kmw-key-text
+div.kmw-key.kmw-key-default[id$='K_X']  div.kmw-key-popup-icon.kmw-key-text,
+
+/* change hint color for blue colored keys */
+div.kmw-key.kmw-key-default[id$='K_Z+shift']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_Z']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_W']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_P+shift']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_V']  div.kmw-key-popup-icon.kmw-key-text,
+
+div.kmw-key.kmw-key-default[id$='K_S+shift']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_D']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_H+shift']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_L']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_F']  div.kmw-key-popup-icon.kmw-key-text,
+
+/* change hint color for green colored keys */
+div.kmw-key.kmw-key-default[id$='K_C+shift']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_C']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='T_12D0']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_B']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_Q+shift']  div.kmw-key-popup-icon.kmw-key-text,
+
+div.kmw-key.kmw-key-default[id$='K_T+shift']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_K+shift']  div.kmw-key-popup-icon.kmw-key-text,
+
+div.kmw-key.kmw-key-default[id$='K_G+shift']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_N+shift']  div.kmw-key-popup-icon.kmw-key-text,
+
+div.kmw-key.kmw-key-default[id$='K_G']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_Y']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_L']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_R']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_N']  div.kmw-key-popup-icon.kmw-key-text,
+
+/* change hint color for yellow colored keys */
+div.kmw-key.kmw-key-default[id$='K_T']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='T_12A0']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_Q']  div.kmw-key-popup-icon.kmw-key-text,
+
+div.kmw-key.kmw-key-default[id$='K_K']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_H']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_M']  div.kmw-key-popup-icon.kmw-key-text
 {color:  #777 ; }
