Fix for missing K_S in new hint shade.

--- a/release/gff/gff_mesobe_fidelat/source/gff_mesobe_fidelat.css
+++ b/release/gff/gff_mesobe_fidelat/source/gff_mesobe_fidelat.css
@@ -649,7 +649,7 @@ div.kmw-key.kmw-key-default[id$='K_V']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_S+shift']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_D']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_H+shift']  div.kmw-key-popup-icon.kmw-key-text,
-div.kmw-key.kmw-key-default[id$='K_L']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_S']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_F']  div.kmw-key-popup-icon.kmw-key-text,
 
 /* change hint color for green colored keys */
