Adding Agbalumo and Menbere fonts, changing K_N hint to default.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -699,7 +699,7 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 .phone.ios div.kmw-key.kmw-key-default[id='በ-layer-K_B'], .tablet.ios div.kmw-key.kmw-key-default[id='በ-layer-K_B'],
 .phone.ios div.kmw-key.kmw-key-default[id='ቨ-layer-K_V'], .tablet.ios div.kmw-key.kmw-key-default[id='ቨ-layer-K_V'],
 .phone.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
-.phone.ios div.kmw-key.kmw-key-default[id='ኘ-layer-K_N+shift'], .tablet.ios div.kmw-key.kmw-key-default[id='ኘ-layer-U_129D'],
+.phone.ios div.kmw-key.kmw-key-default[id='ኘ-layer-K_N'], .tablet.ios div.kmw-key.kmw-key-default[id='ኘ-layer-U_129D'],
 .phone.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M'], .tablet.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M'],
 
 .phone.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'], .tablet.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'],
