Layer refinement and T_STOP introduced.

--- a/release/gff/gff_amharic_classic/source/gff_amharic.css
+++ b/release/gff/gff_amharic_classic/source/gff_amharic.css
@@ -10,9 +10,13 @@
 .phone div.kmw-key.kmw-key-shift[id$='K_ENTER'],   .tablet div.kmw-key.kmw-key-shift[id$='K_ENTER'],
 .phone div.kmw-key.kmw-key-shift[id$='K_SHIFT'],   .tablet div.kmw-key.kmw-key-shift[id$='K_SHIFT'],
 .phone div.kmw-key.kmw-key-special[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-special[id$='K_SHIFT'],
-.phone div.kmw-key.kmw-key-shift[id$='T_EMPTY'],   .tablet div.kmw-key.kmw-key-shift[id$='T_EMPTY']
+.phone div.kmw-key.kmw-key-shift[id$='T_EMPTY'],   .tablet div.kmw-key.kmw-key-shift[id$='T_EMPTY'],
+.phone div.kmw-key.kmw-key-default[id$='T_STOP'],   .tablet div.kmw-key.kmw-key-default[id$='T_STOP']
 /* { background: #f3d6ce  ; color: black; } */
   { background: #ece1d5 ; color: black ; }
+
+.phone div.kmw-key.kmw-key-default[id$='T_STOP']  span.kmw-key-text
+  {color: red; }
 
 /* default layers: latin punctuation */
 .phone div.kmw-key.kmw-key-default[id$='K_SPACE'], .tablet div.kmw-key.kmw-key-default[id$='K_SPACE']
@@ -425,6 +429,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1384'], .tablet div.kmw-key.kmw-key-default[id$='U_1384'],  /* ᎄ */
 .phone div.kmw-key.kmw-key-default[id$='U_1388'], .tablet div.kmw-key.kmw-key-default[id$='U_1388'],  /* ᎈ */
 .phone div.kmw-key.kmw-key-default[id$='U_138C'], .tablet div.kmw-key.kmw-key-default[id$='U_138C'],   /* ᎌ */
+.phone div.kmw-key.kmw-key-default[id$='T_WWE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWE'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWE']
   {
     background: #ffffff;  color: black ;
@@ -447,6 +452,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FA'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FA'], /* 𞟺 */
 .phone div.kmw-key.kmw-key-default[id$='U_138B'], .tablet div.kmw-key.kmw-key-default[id$='U_138B'],  /* ᎋ */
 .phone div.kmw-key.kmw-key-default[id$='U_138F'], .tablet div.kmw-key.kmw-key-default[id$='U_138F'],  /* ᎏ */
+.phone div.kmw-key.kmw-key-default[id$='T_WWU'], .tablet div.kmw-key.kmw-key-default[id$='T_WWU']
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWU'], .tablet div.kmw-key.kmw-key-default[id$='T_WWU']
   {
     background: #ffffff; color: black ;
@@ -470,6 +476,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7F8'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F8'], /* 𞟸 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FB'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FB'], /* 𞟻 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FD'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FD'], /* 𞟽 */
+.phone div.kmw-key.kmw-key-default[id$='T_WWI'], .tablet div.kmw-key.kmw-key-default[id$='T_WWI'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWI'], .tablet div.kmw-key.kmw-key-default[id$='T_WWI']
   {
     background: #ffffff;  color: black ;
@@ -484,6 +491,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_12C3'], .tablet div.kmw-key.kmw-key-default[id$='U_12C3'], /* ዃ */
 .phone div.kmw-key.kmw-key-default[id$='U_1313'], .tablet div.kmw-key.kmw-key-default[id$='U_1313'], /* ጓ */
 .phone div.kmw-key.kmw-key-default[id$='U_131F'], .tablet div.kmw-key.kmw-key-default[id$='U_131F'], /* ጟ */
+.phone div.kmw-key.kmw-key-default[id$='T_WWAA'], .tablet div.kmw-key.kmw-key-default[id$='T_WWAA'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWAA'], .tablet div.kmw-key.kmw-key-default[id$='T_WWAA']
   {
     background: #ffffff;  color: black ;
@@ -506,6 +514,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7F9'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F9'], /* 𞟹 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FC'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FC'], /* 𞟼 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FE'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FE'], /* 𞟾 */
+.phone div.kmw-key.kmw-key-default[id$='T_WWEE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWEE'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWEE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWEE']
   {
     background: #ffffff;  color: black ;
